# canvas-snake-game-using-std

./: Cargo.toml  README.md  index.html
.cargo/: config.toml
src/: canvas.rs  lib.rs  snake.rs
