[package]
name = "wasm_snake"
version = "0.1.0"
authors = ["muhammad <muhammadzeejah1122@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent"
]}
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[[bin]]
name = "wasm_snake"
path = "src/main.rs"